--- a/adpanda/pom.xml
+++ b/adpanda/pom.xml
@@ -31,5 +31,10 @@
     	<artifactId>adwords-axis</artifactId>
     	<version>RELEASE</version>
     </dependency>
+    <dependency>
+    	<groupId>com.facebook.ads.sdk</groupId>
+    	<artifactId>facebook-java-ads-sdk</artifactId>
+    	<version>2.9.0</version>
+    </dependency>
   </dependencies>
 </project>
